Using cropped image throughout and footer padding fixed

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6379,6 +6379,7 @@ nav .btn-default:hover {
 }
 footer#site-footer {
   text-align: center;
+  margin-bottom: 15px;
 }
 footer#site-footer .btn-link,
 footer#site-footer .btn-link:link,
